Fix global width to solve header wrapping on small browser sizes

--- a/css/common.less
+++ b/css/common.less
@@ -135,7 +135,7 @@ header {
     a {
       display:block;
       float:left;
-      width: 120px;
+      width: 115px;
       padding: 5px 20px;
       border-left: 1px dashed @grey;
       font-family: Helvetica, sans-serif;
